--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -9,19 +9,37 @@
 
 <div class="container">
 
-	<h1>Группы <small><a href="" class="create-group-link  internal-page-link">создать</a></small></h1>
-	
+	<h1>Группы
+		<small>
+			<a href="" class="create-group-link  internal-page-link">создать</a>
+			@if (Model.GroupsMayBeCopied.Count > 0)
+			{
+				<a href="" class="copy-group-link  internal-page-link">копировать группу</a>
+			}
+		</small>
+	</h1>
+
 	<div class="groups">
-		@if (Model.Groups.Count == 0)
+		@if (Model.Groups.Count(g => g.IsArchived) > 0)
+		{
+			<div class="checkbox checkbox-default">
+				<input type="checkbox" id="showArchivedGroups" data-toggle="collapse" data-target=".archived-group" />
+				<label for="showArchivedGroups">
+					Показывать архивные группы
+				</label>
+			</div>
+		}
+		@if (Model.Groups.Count(g => !g.IsArchived) == 0)
 		{
 			<div>
 				<a href="" class="create-group-link  internal-page-link">Создайте</a> группу, пригласите в неё студентов или добавьте их самостоятельно. Смотрите статистку только по своей группе.
 			</div>
 		}
-		@foreach (var group in Model.Groups.OrderBy(g => g.OwnerId != User.Identity.GetUserId()))
+
+		@foreach (var group in Model.Groups)
 		{
 			var enabledScoringGroupsIds = Model.EnabledScoringGroups.GetOrDefault(group.Id, new List<string>());
-			<div class="group" data-group-id="@group.Id">
+			<div class="group @(group.IsArchived ? "archived-group collapse" : "")" data-group-id="@group.Id">
 				<h3 class="group__title">
 					<a href=""
 					   class="edit-group-link  internal-page-link"
@@ -29,8 +47,10 @@
 					   data-group-id="@group.Id"
 					   data-name="@group.Name"
 					   data-is-public="@group.IsPublic.ToString().ToLower()"
+					   data-is-archived="@group.IsArchived.ToString().ToLower()"
 					   data-manual-checking="@group.IsManualCheckingEnabled.ToString().ToLower()"
-					   data-scoring-groups="@string.Join(",", enabledScoringGroupsIds)">@group.Name</a>
+					   data-scoring-groups="@string.Join(",", enabledScoringGroupsIds)"
+					   data-owner-id="@group.OwnerId">@group.Name</a>
 
 					@if (!group.IsPublic)
 					{
@@ -40,15 +60,18 @@
 					{
 						<small><span class="label label-primary">владелец: @group.Owner.VisibleName</span></small>
 					}
+					@if (group.IsArchived)
+					{
+						<small><span class="label label-switcher">архивная группа</span></small>
+					}
 				</h3>
-				@{
-					var inviteLink = Url.Action("JoinGroup", "Account", new { hash = group.InviteHash }, Request.Url.Scheme);
+				@{var inviteLink = Url.Action("JoinGroup", "Account", new { hash = group.InviteHash }, Request.Url.Scheme);
 				}
 				<div class="@(group.IsInviteLinkEnabled ? "text-muted" : "text-danger")">
 					<span class="clipboard-link" data-clipboard-text="@inviteLink" title="Отправьте эту ссылку студентам для присоединения к группе. Студенты увидят название группы">
 						@inviteLink
 					</span>
-					
+
 					@if (group.IsInviteLinkEnabled)
 					{
 						<button class="clipboard-link  btn btn-xs btn-primary" data-clipboard-text="@inviteLink" data-show-copied="true">
@@ -74,26 +97,30 @@
 					}
 				</ol>
 
-				@if (group.OwnerId == User.Identity.GetUserId() || User.HasAccessFor(Model.CourseId, CourseRole.CourseAdmin))
+				@{
+					var canUserAddMembersToGroup = group.OwnerId == User.Identity.GetUserId() || User.HasAccessFor(Model.CourseId, CourseRole.CourseAdmin);
+				}
+				@if (canUserAddMembersToGroup && !group.IsArchived)
 				{
 					if (group.Members.Count == 0)
 					{
-						<div>В группе нет пользователей. Добавьте:</div>
+						<div>В группе нет студентов. Добавьте:</div>
 					}
 					else
 					{
-						<div>Добавить пользователя:</div>
+						<div>Добавить студентов:</div>
 					}
 					<input type="text"
 						   class="add-user-to-group-input form-control"
 						   data-group-id="@group.Id"
-						   data-url="@Url.Action("FindUsers", "Admin", new { courseId = Model.CourseId })"
+						   data-url="@Url.Action("FindUsers", "Admin", new { courseId=Model.CourseId, withGroups=false })"
 						   placeholder="Начните вводить имя или фамилию">
 				}
-			</div>
-
-			<hr/>
-		}
+				@if (group.IsArchived && group.Members.Count == 0)
+				{
+					<div class="text-muted" title="Нельзя добавлять пользователей в архивные группы">Нет студентов</div>
+				}
+			</div>}
 	</div>
 </div>
 
@@ -111,17 +138,26 @@
 				}))
 				{
 					@Html.AntiForgeryToken()
-					<input type="hidden" name="courseId" value="@Model.CourseId"/>
+					<input type="hidden" name="courseId" value="@Model.CourseId" />
 					<input type="hidden" name="groupId" value="" />
 
 					<div class="form-group">
 						<input id="name" name="name" type="text" class="form-control" placeholder="Название новой группы">
 						<p class="help-block">
-							Студенты увидят название группы, только если вы сами вышлете им ссылку для вступления
+							Студенты увидят название группы, только если вы сами вышлете им ссылку для&nbsp;вступления
 						</p>
 					</div>
 
 					<h3>Настройки</h3>
+
+					<div>
+						Владелец&nbsp;
+						@Html.DropDownList("ownerId", Model.Instructors.Select(i => new SelectListItem
+						{
+							Value = i.UserId,
+							Text = i.UserVisibleName,
+						}), new { @class = "form-control ib input-sm", data_default_value = User.Identity.GetUserId() })
+					</div>
 
 					<div class="checkbox checkbox-default">
 						@Html.CheckBox("isPublic")
@@ -138,25 +174,84 @@
 						</label>
 					</div>
 
+					<div class="checkbox checkbox-default">
+						@Html.CheckBox("isArchived")
+						<label for="isArchived">
+							Архивная группа
+							<span class="glyphicon glyphicon-question-sign with-long-tooltip"
+								  data-toggle="tooltip"
+								  data-placement="right"
+								  title="Студенты из архивных группы не показываются по фильтру «Мои группы», а сама группа не отвлекает вас от работы. Вы сможете вернуть группу их архива в любой момент">
+							</span>
+						</label>
+					</div>
+
 					if (Model.ScoringGroupsCanBeSetInSomeUnit.Count > 0)
 					{
 						<h3>Баллы</h3>
 						<div>
-							 Преподаватели могут выставлять студентам группы следующие баллы:
-							 @foreach (var scoringGroup in Model.ScoringGroupsCanBeSetInSomeUnit)
-							 {
+							Преподаватели могут выставлять студентам группы следующие баллы:
+							@foreach (var scoringGroup in Model.ScoringGroupsCanBeSetInSomeUnit)
+							{
 								<div class="checkbox checkbox-default scoring-group-checkbox">
 									@Html.CheckBox("scoring-group__" + scoringGroup.Id)
 									<label for="scoring-group__@scoringGroup.Id">
 										@scoringGroup.Name
 									</label>
 								</div>
-							 }
+							}
 						</div>
 					}
 
 					<button class="action-button  btn btn-success">Создать</button>
 					<button class="remove-group-link  btn btn-danger" data-url="@Url.Action("RemoveGroup", "Admin")">Удалить группу</button>
+				}
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade" id="copyGroupModal" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h4 class="modal-title">Скопировать группу</h4>
+			</div>
+			<div class="modal-body">
+				@using (Html.BeginForm("CopyGroup", "Admin", FormMethod.Post))
+				{
+					@Html.Hidden("courseId", Model.CourseId);
+					<div>
+						<p>
+							Новая группа будет создана для курса «@Model.CoursesNames[Model.CourseId]».
+							Скопируются все настройки группы (в том числе владелец), в неё автоматически добавятся участники из копируемой группы.
+						</p>
+					</div>
+					<div class="form-group input-group">
+						@{
+							var selectGroups = Model.CoursesNames.ToDictionary(kv => kv.Key, kv => new SelectListGroup { Name = kv.Value });
+							var copiedGroupsList = Model.GroupsMayBeCopied.Select(g => new SelectListItem
+							{
+								Value = g.Id.ToString(),
+								Text = g.Name + ": " + g.Members.Count.PluralizeInRussian(new RussianPluralizationOptions
+								{
+									One = "человек",
+									Two = "человека",
+									Five = "человек",
+									Gender = Gender.Male,
+									hideNumberOne = false
+								}),
+								Group = selectGroups.GetOrDefault(g.CourseId)
+							}).ToList();
+							copiedGroupsList.Insert(0, new SelectListItem { Value = "-1", Text = "Выберите группу", });
+						}
+
+						Группа, которую надо скопировать
+						@Html.DropDownList("groupId", copiedGroupsList, new { @class = "form-control" })
+					</div>
+					<div class="form-group">
+						<button class="btn btn-success copy-group-button">Скопировать группу</button>
+					</div>
 				}
 			</div>
 		</div>
