--- a/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
@@ -67,7 +67,7 @@
 	<div class="checkbox checkbox-default">
 		<input data-val="true" id="prohibitFurtherReview" name="prohibitFurtherReview" type="checkbox" value="true" @(Model.Checking.IsChecked && !Model.Checking.ProhibitFurtherManualCheckings ? "" : "checked") @IsScoreFormActive()/>
 		<label for="prohibitFurtherReview">
-			Не принимать больше код ревью у этого студента
+			Не принимать больше код-ревью у этого студента
 		</label>
 	</div>
 
