--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -166,11 +166,15 @@
 						</label>
 					</div>
 
-					<div class="checkbox checkbox-default @(Model.CourseManualCheckingEnabled ? "hidden" : "")"
+					<div class="checkbox checkbox-default"
 						 data-default-value="@((!Model.CourseManualCheckingEnabled).ToString().ToLower())">
-						@Html.CheckBox("manualChecking")
+						@Html.CheckBox("manualChecking", true, Model.CourseManualCheckingEnabled ? (object) new { disabled = "disabled"} : new {})
 						<label for="manualChecking">
-							Включить код-ревью и ручную проверку тестов для участников группы
+							Включить код-ревью и ручную проверку тестов для участников группы <br/>
+							@if (Model.CourseManualCheckingEnabled)
+							{
+								<span>(включено для всего курса)</span>
+							}
 						</label>
 					</div>
 
@@ -246,7 +250,7 @@
 							copiedGroupsList.Insert(0, new SelectListItem { Value = "-1", Text = "Выберите группу", });
 						}
 
-						Группа, которую надо скопировать
+						Группа, которую надо скопировать&nbsp;
 						@Html.DropDownList("groupId", copiedGroupsList, new { @class = "form-control" })
 					</div>
 					<div class="form-group">
