--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -88,6 +88,8 @@
 	</div>
 	@RenderBody()
 
+	@Html.Partial("_UlearnUpdatesInvitation")
+
 	@Scripts.Render("~/main-js")
 	@RenderSection("scripts", required: false)
 
