--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -14,7 +14,7 @@
 			<a href="" class="create-group-link  internal-page-link">создать</a>
 			@if (Model.GroupsMayBeCopied.Count > 0)
 			{
-				<a href="" class="copy-group-link  internal-page-link">копировать группу</a>
+				<a href="" class="copy-group-link  internal-page-link">скопировать из...</a>
 			}
 		</small>
 	</h1>
@@ -22,11 +22,9 @@
 	<div class="groups">
 		@if (Model.Groups.Count(g => g.IsArchived) > 0)
 		{
-			<div class="checkbox checkbox-default">
-				<input type="checkbox" id="showArchivedGroups" data-toggle="collapse" data-target=".archived-group" />
-				<label for="showArchivedGroups">
-					Показывать архивные группы
-				</label>
+			<div class="btn-group show-archived-groups-selector">
+				<button class="btn btn-default btn-sm active">Активные группы</button>
+				<button class="btn btn-default btn-sm">Архив</button>
 			</div>
 		}
 		@if (Model.Groups.Count(g => !g.IsArchived) == 0)
@@ -39,18 +37,26 @@
 		@foreach (var group in Model.Groups)
 		{
 			var enabledScoringGroupsIds = Model.EnabledScoringGroups.GetOrDefault(group.Id, new List<string>());
-			<div class="group @(group.IsArchived ? "archived-group collapse" : "")" data-group-id="@group.Id">
+			var canModifyGroup = Model.CanModifyGroup[group.Id];
+			<div class="group @(group.IsArchived ? "archived-group" : "nonarchived-group")" data-group-id="@group.Id">
 				<h3 class="group__title">
-					<a href=""
-					   class="edit-group-link  internal-page-link"
-					   title="Редактировать свойства"
-					   data-group-id="@group.Id"
-					   data-name="@group.Name"
-					   data-is-public="@group.IsPublic.ToString().ToLower()"
-					   data-is-archived="@group.IsArchived.ToString().ToLower()"
-					   data-manual-checking="@group.IsManualCheckingEnabled.ToString().ToLower()"
-					   data-scoring-groups="@string.Join(",", enabledScoringGroupsIds)"
-					   data-owner-id="@group.OwnerId">@group.Name</a>
+					@if (canModifyGroup)
+					{
+						<a href=""
+						   class="edit-group-link  internal-page-link"
+						   title="Редактировать свойства"
+						   data-group-id="@group.Id"
+						   data-name="@group.Name"
+						   data-is-public="@group.IsPublic.ToString().ToLower()"
+						   data-is-archived="@group.IsArchived.ToString().ToLower()"
+						   data-manual-checking="@group.IsManualCheckingEnabled.ToString().ToLower()"
+						   data-scoring-groups="@string.Join(",", enabledScoringGroupsIds)"
+						   data-owner-id="@group.OwnerId">@group.Name</a>
+					}
+					else
+					{
+						@group.Name
+					}
 
 					@if (!group.IsPublic)
 					{
@@ -62,13 +68,14 @@
 					}
 					@if (group.IsArchived)
 					{
-						<small><span class="label label-switcher">архивная группа</span></small>
+						<small><span class="label label-warning">архивная группа</span></small>
 					}
 				</h3>
-				@{var inviteLink = Url.Action("JoinGroup", "Account", new { hash = group.InviteHash }, Request.Url.Scheme);
+				@{
+					var inviteLink = Url.Action("JoinGroup", "Account", new { hash = group.InviteHash }, Request.GetRealScheme());
 				}
 				<div class="@(group.IsInviteLinkEnabled ? "text-muted" : "text-danger")">
-					<span class="clipboard-link" data-clipboard-text="@inviteLink" title="Отправьте эту ссылку студентам для присоединения к группе. Студенты увидят название группы">
+					<span class="@(group.IsInviteLinkEnabled ? "clipboard-link" : "")" data-clipboard-text="@inviteLink" title="Отправьте эту ссылку студентам для присоединения к группе. Студенты увидят название группы">
 						@inviteLink
 					</span>
 
@@ -79,28 +86,30 @@
 						</button>
 					}
 
-					<form action="@Url.Action("EnableGroupInviteLink", "Admin", new { groupId = group.Id, isEnabled = !group.IsInviteLinkEnabled })" method="POST" class="ib">
-						@Html.AntiForgeryToken()
-						<button class="btn @(group.IsInviteLinkEnabled ? "btn-default" : "btn-primary") btn-xs">
-							@(group.IsInviteLinkEnabled ? "отключить ссылку" : "включить ссылку")
-						</button>
-					</form>
-
+					@if (canModifyGroup)
+					{
+						<form action="@Url.Action("EnableGroupInviteLink", "Admin", new { groupId = group.Id, isEnabled = !group.IsInviteLinkEnabled })" method="POST" class="ib">
+							@Html.AntiForgeryToken()
+							<button class="btn btn-default btn-xs">
+								@(group.IsInviteLinkEnabled ? "отключить ссылку" : "включить ссылку")
+							</button>
+						</form>
+					}
 				</div>
 				<ol class="members">
 					@foreach (var member in group.Members.OrderBy(m => m.User.VisibleName))
 					{
 						<li class="member">
 							@member.User.VisibleName (@member.User.UserName)
-							<span class="glyphicon glyphicon-remove  remove-user-from-group-link  text-danger visible-on-parent-hover  cursor-pointer" data-group-id="@group.Id" data-user-id="@member.User.Id" title="Удалить из группы"></span>
+							@if (canModifyGroup)
+							{
+								<span class="glyphicon glyphicon-remove  remove-user-from-group-link  text-danger visible-on-parent-hover  cursor-pointer" data-group-id="@group.Id" data-user-id="@member.User.Id" title="Удалить из группы"></span>
+							}
 						</li>
 					}
 				</ol>
 
-				@{
-					var canUserAddMembersToGroup = group.OwnerId == User.Identity.GetUserId() || User.HasAccessFor(Model.CourseId, CourseRole.CourseAdmin);
-				}
-				@if (canUserAddMembersToGroup && !group.IsArchived)
+				@if (canModifyGroup && !group.IsArchived)
 				{
 					if (group.Members.Count == 0)
 					{
@@ -113,14 +122,17 @@
 					<input type="text"
 						   class="add-user-to-group-input form-control"
 						   data-group-id="@group.Id"
-						   data-url="@Url.Action("FindUsers", "Admin", new { courseId=Model.CourseId, withGroups=false })"
+						   data-url="@Url.Action("FindUsers", "Admin", new { courseId = Model.CourseId, withGroups = false })"
 						   placeholder="Начните вводить имя или фамилию">
 				}
-				@if (group.IsArchived && group.Members.Count == 0)
+				@if ((group.IsArchived || ! canModifyGroup) && group.Members.Count == 0)
 				{
-					<div class="text-muted" title="Нельзя добавлять пользователей в архивные группы">Нет студентов</div>
+					<div class="text-muted" title="@(group.IsArchived && canModifyGroup ? "Нельзя добавлять пользователей в архивные группы" : "")">
+						Нет студентов
+					</div>
 				}
-			</div>}
+			</div>
+		}
 	</div>
 </div>
 
@@ -172,9 +184,10 @@
 						</label>
 					</div>
 
-					<div class="checkbox checkbox-default"
-						 data-default-value="@((!Model.CourseManualCheckingEnabled).ToString().ToLower())">
-						@Html.CheckBox("manualChecking", true, Model.CourseManualCheckingEnabled ? (object) new { disabled = "disabled"} : new {})
+					<div class="checkbox checkbox-default">
+						@Html.CheckBox("manualChecking",
+									   true,
+									   Model.CourseManualCheckingEnabled ? (object) new { disabled = "disabled"} : new { data_default_value = "true" })
 						<label for="manualChecking">
 							Включить код-ревью и ручную проверку тестов для участников группы <br/>
 							@if (Model.CourseManualCheckingEnabled)
@@ -191,7 +204,7 @@
 							<span class="glyphicon glyphicon-question-sign with-long-tooltip"
 								  data-toggle="tooltip"
 								  data-placement="right"
-								  title="Студенты из архивных группы не показываются по фильтру «Мои группы», а сама группа не отвлекает вас от работы. Вы сможете вернуть группу их архива в любой момент">
+								  title="Студенты из архивных группы не показываются по фильтру «Мои группы», а сама группа не отвлекает вас от работы. Вы сможете вернуть группу из архива в любой момент">
 							</span>
 						</label>
 					</div>
@@ -240,7 +253,8 @@
 					<div class="form-group input-group">
 						@{
 							var selectGroups = Model.CoursesNames.ToDictionary(kv => kv.Key, kv => new SelectListGroup { Name = kv.Value });
-							var copiedGroupsList = Model.GroupsMayBeCopied.Select(g => new SelectListItem
+							var instructorsUsersIds = new HashSet<string>(Model.Instructors.Select(i => i.UserId));
+							var copiedGroupsList = Model.GroupsMayBeCopied.Select(g => new SelectListItemWithAttributes
 							{
 								Value = g.Id.ToString(),
 								Text = g.Name + ": " + g.Members.Count.PluralizeInRussian(new RussianPluralizationOptions
@@ -251,13 +265,31 @@
 									Gender = Gender.Male,
 									hideNumberOne = false
 								}),
-								Group = selectGroups.GetOrDefault(g.CourseId)
+								Group = selectGroups.GetOrDefault(g.CourseId),
+								HtmlAttributes = new
+								{
+									data_owner = g.Owner.VisibleName,
+									data_need_to_change_owner = !instructorsUsersIds.Contains(g.OwnerId)
+								}
 							}).ToList();
-							copiedGroupsList.Insert(0, new SelectListItem { Value = "-1", Text = "Выберите группу", });
+							copiedGroupsList.Insert(0, new SelectListItemWithAttributes { Value = "-1", Text = "Выберите группу", });
 						}
 
 						Группа, которую надо скопировать&nbsp;
-						@Html.DropDownList("groupId", copiedGroupsList, new { @class = "form-control" })
+						@Html.DropDownListWithItemAttributes("groupId", copiedGroupsList, new { @class = "form-control" })
+					</div>
+					<div class="form-group copy-group__change-owner-block">
+						<p class="help-block">
+							Владелец этой группы <span class="owner-name"></span> не&nbsp;является преподавателем курса «@Model.CoursesNames[Model.CourseId]».
+							Вы&nbsp;можете @(User.HasAccessFor(Model.CourseId, CourseRole.CourseAdmin) ? "добавить его в список преподавателей или" : "")
+							сделать себя владельцем скопированной группы.
+						</p>
+						<div class="checkbox checkbox-default">
+							@Html.CheckBox("changeOwner")
+							<label for="changeOwner">
+								Сделать меня владельцем группы
+							</label>
+						</div>
 					</div>
 					<div class="form-group">
 						<button class="btn btn-success copy-group-button">Скопировать группу</button>
