Remove link from ulearn updates invitation

--- a/src/uLearn.Web/Views/Shared/_UlearnUpdatesInvitation.cshtml
+++ b/src/uLearn.Web/Views/Shared/_UlearnUpdatesInvitation.cshtml
@@ -16,7 +16,7 @@
 						коллекция архивных (неиспользуемых) групп, настраиваемое код-ревью и многое другое.
 					</p>
 					<p>
-						Обо всех важных изменениях мы теперь пишем в Гугл-группу <a href="https://groups.google.com/forum/#!forum/ulearn-updates" target="_blank">ulearn-updates</a>.
+						Обо всех важных изменениях мы теперь пишем в Гугл-группу ulearn-updates.
 						Подписывайтесь и настраивайте получение уведомлений обо всех новых сообщениях на электронную почту.
 					</p>
 					<p>
@@ -24,8 +24,8 @@
 						<span class="text-muted">(откроется в новой вкладке)</span>
 					</p>
 					<p>
-						А в конце прошлого года мы переехали на более мощные сервера&nbsp;&mdash; теперь все странички грузятся шустрее,
-						а решения проверяются в два раза быстрее.
+						А&nbsp;в&nbsp;конце прошлого года мы переехали на более мощные сервера&nbsp;&mdash; теперь все странички грузятся шустрее,
+						а&nbsp;решения проверяются в два раза быстрее.
 					</p>
 					<p>
 						Всегда ваши, <br/>команда ulearn.me. <br/>Пишите нам на <a href="mailto:support@ulearn.me">support@ulearn.me</a>.
