Add summer practice banner

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -140,6 +140,10 @@ p {
 	max-width: 350px;
 }
 
+.summer-practice {
+	margin-top: 24px;
+}
+
 /* ReSharper restore Html.CssClassElementsNotFound */
 /* ReSharper restore DeclarationIsEmpty */
 /*#endregion */
