Allow anonymouse viewing of exercises

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -563,12 +563,12 @@
 
 @functions
 {
-	private static string GetGuestOnclick(bool isGuest)
+	public static string GetGuestOnclick(bool isGuest)
 	{
 		return isGuest ? "onclick=loginForContinue()" : "";
 	}
 
-	private static string GetGuestDisable(bool isGuest)
+	public static string GetGuestDisable(bool isGuest)
 	{
 		return isGuest ? "disabled" : null;
 	}
