--- a/src/uLearn.Web/Views/Course/LtiExerciseSlide.cshtml
+++ b/src/uLearn.Web/Views/Course/LtiExerciseSlide.cshtml
@@ -21,6 +21,7 @@
 		<script> getHints("@Model.CourseId", "@Model.SlideId.GetNormalizedGuid()", '@Model.ExerciseBlock.HintsMd.Count') </script>
 		<script> refreshPreviousDraft('@Model.SlideId') </script>
 	}
-</body>
 
+	@Html.Partial("_YandexMetrika")
+</body>
 </html>
