--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -50,6 +50,7 @@
 						   data-is-public="@group.IsPublic.ToString().ToLower()"
 						   data-is-archived="@group.IsArchived.ToString().ToLower()"
 						   data-manual-checking="@group.IsManualCheckingEnabled.ToString().ToLower()"
+						   data-manual-checking-for-old-solutions="@group.IsManualCheckingEnabledForOldSolutions.ToString().ToLower()"
 						   data-scoring-groups="@string.Join(",", enabledScoringGroupsIds)"
 						   data-owner-id="@group.OwnerId">@group.Name</a>
 					}
@@ -186,14 +187,26 @@
 
 					<div class="checkbox checkbox-default">
 						@Html.CheckBox("manualChecking",
-									   true,
-									   Model.CourseManualCheckingEnabled ? (object) new { disabled = "disabled"} : new { data_default_value = "true" })
+							true,
+							Model.CourseManualCheckingEnabled ? (object)new { disabled = "disabled" } : new { data_default_value = "true" })
 						<label for="manualChecking">
 							Включить код-ревью и ручную проверку тестов для участников группы <br/>
 							@if (Model.CourseManualCheckingEnabled)
 							{
 								<span>(включено для всего курса)</span>
 							}
+						</label>
+					</div>
+
+					<div class="checkbox checkbox-default @(Model.CourseManualCheckingEnabled ? "hidden" : "")">
+						@Html.CheckBox("manualCheckingForOldSolutions", true)
+						<label for="manualCheckingForOldSolutions">
+							Отправить на код-ревью и ручную проверку тестов старые решения участников
+							<span class="glyphicon glyphicon-question-sign with-long-tooltip"
+								  data-toggle="tooltip"
+								  data-placement="right"
+								  title="Если эта опция выключена, то при добавлении студента в группу его старые решения не будут отправлены в очередь на код-ревью">
+							</span>
 						</label>
 					</div>
 
