Fix bug with login via LTI: first page is not loading
Add logging to RunnerController
Small changes in UserSolutionsRepo and Sandbox/Index.cshtml

--- a/src/uLearn.Web/Views/Sandbox/Index.cshtml
+++ b/src/uLearn.Web/Views/Sandbox/Index.cshtml
@@ -25,7 +25,7 @@
 		var name = automaticChecking.DisplayName ?? submission.Id.ToString();
 		<tr class="@SubmissionClass(automaticChecking.GetVerdict()) submitions-item" data-id="@submission.Id">
 			<td>@submission.Id</td>
-			<td>@submission.Timestamp.ToPrettyString()</td>
+			<td title="@submission.Timestamp">@submission.Timestamp.ToPrettyString(true)</td>
 			<td>@automaticChecking.Elapsed</td>
 			<td>@name</td>
 			<td>@automaticChecking.Status</td>
