--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -49,17 +49,17 @@
 		</div>
 		<div class="row">
 			<div class="course-tile col-md-6">
-				<h2>Практикум по языку запросов LINQ</h2>
+				<h2>Проектирование <nobr>на языке C#</nobr></h2>
 				<p>
-					Длительность курса: 2–4 часа.
-				<p>
-					Вы познакомитесь с основами LINQ
-					на тщательно подобранных примерах и задачах.
+					Продолжение курса «Основы программирования».
+					Внутри вы узнаете об основах объектно-ориентированного программирования
+					и шаблонах проектирования ПО. Будет полезно для тех, кто прошёл курс «Основы программирования»,
+					или для тех, кто уже владеет другим языком программирования.
 				</p>
 				<p>
-					Полезно даже тем, кто поверхностно знаком с LINQ.
+					Длительность: 1 семестр, 1–2 часа в неделю
 				</p>
-				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Linq" }, new { @class = "btn btn-primary" })</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "CS2" }, new { @class = "btn btn-primary" })</p>
 			</div>
 			<div class="course-tile col-md-6">
 				<h2>Основы компьютерной безопасности</h2>
@@ -72,6 +72,19 @@
 			</div>
 		</div>
 		<div class="row">
+			<div class="course-tile col-md-6">
+				<h2>Практикум по языку запросов LINQ</h2>
+				<p>
+					Длительность курса: 2–4 часа.
+				<p>
+					Вы познакомитесь с основами LINQ
+					на тщательно подобранных примерах и задачах.
+				</p>
+				<p>
+					Полезно даже тем, кто поверхностно знаком с LINQ.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Linq" }, new { @class = "btn btn-primary" })</p>
+			</div>
 			<div class="course-tile col-md-6">
 				<h2>The Clean Code Game</h2>
 				<p>Длительность: 10–20 минут</p>
